--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com</groupId>
-	<artifactId>travel rhythm</artifactId>
+	<artifactId>travel_rhythm</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>travel rhythm</name>
+	<name>travel_rhythm</name>
 	<description>travel rhythm project for Spring Boot</description>
 
 	<properties>
