--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,11 @@
 			<version>1.1.1</version>
 		</dependency>
 		<dependency>
+			<groupId>com.vladmihalcea</groupId>
+			<artifactId>hibernate-types-52</artifactId>
+			<version>2.18.0</version>
+		</dependency>
+		<dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
       <version>4.5.13</version>
