--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.properties.hibernate.jdbc.batch_size=50
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/travel_rhythm?serverTimezone=UTC
-spring.datasource.username=${databaseUsername}
-spring.datasource.password=${databasePassword}
+spring.datasource.username=root
+spring.datasource.password=1234
