--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # server
 server.port=8080
 
+
 # jpa
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -9,6 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.output.ansi.enabled=always
 
 # jpa mysql
 spring.jpa.database=mysql
@@ -16,3 +18,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.datasource.url=jdbc:mysql://localhost:3306/travel_rhythm?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
+
+logging.level.org.hibernate.type: trace
