--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/travel_rhythm?serverTimezone=U
 spring.datasource.username=root
 spring.datasource.password=1234
 
-logging.level.org.hibernate.type: trace
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
